5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1668_2969.log
== TEST (2019-04-15 18:48:22) 
-- CODE:
x = int(float("valordo jogo")):
print("mensagem")
-- ERROR:
File "XXXX", line 1
    x = int(float("valordo jogo")):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:32) 
-- CODE:
x = int(float("valordo jogo:"))
print("mensagem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(float("valordo jogo:"))
ValueError: could not convert string to float: 'valordo jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:48:46) 
-- CODE:
x = input(float("valordo jogo:"))
print("mensagem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("valordo jogo:"))
ValueError: could not convert string to float: 'valordo jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:01) 
-- CODE:
x = input("valordo jogo:")
print("mensagem")
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:19) 
-- CODE:
x = input("valordo jogo:")
print("mensagem")
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:37) 
-- CODE:
x = input("valordo jogo:")
print("")
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:49:51) 
-- CODE:
x = input("valordo jogo:")
print()
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:50:26) 
-- CODE:
x = input("valordo jogo:")
print()
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:51:03) 
-- CODE:
x = input("quantidade do jogo:")
print()
-- OUTPUT:
mensagem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:07) 
-- CODE:
x = float("quantidade do jogo:")
z = int(float("valor do jogo:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float("quantidade do jogo:")
ValueError: could not convert string to float: 'quantidade do jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:40) 
-- CODE:
x = float("quantidade do jogo:")
z = float("valor do jogo:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float("quantidade do jogo:")
ValueError: could not convert string to float: 'quantidade do jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:53:54) 
-- CODE:
x = float("quantidade do jogo:")
z = int("valor do jogo:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float("quantidade do jogo:")
ValueError: could not convert string to float: 'quantidade do jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:36) 
-- CODE:
x = float('quantidade do jogo:')
z = int('valor do jogo:')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float('quantidade do jogo:')
ValueError: could not convert string to float: 'quantidade do jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:54:38) 
-- CODE:
x = float('quantidade do jogo:')
z = int('valor do jogo:')
-- EXECUTION TIME:
0.136335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2969/main.py", line 1, in <module>
    x = float('quantidade do jogo:')
ValueError: could not convert string to float: 'quantidade do jogo:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:54:39) 
-- CODE:
x = float('quantidade do jogo:')
z = int('valor do jogo:')
-- EXECUTION TIME:
0.110389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2969/main.py", line 1, in <module>
    x = float('quantidade do jogo:')
ValueError: could not convert string to float: 'quantidade do jogo:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:54:39) 
-- CODE:
x = float('quantidade do jogo:')
z = int('valor do jogo:')
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = float('quantidade do jogo:')
ValueError: could not convert string to float: 'quantidade do jogo:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:54:40) 
-- CODE:
x = float('quantidade do jogo:')
z = int('valor do jogo:')
-- EXECUTION TIME:
0.127485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2969/main.py", line 1, in <module>
    x = float('quantidade do jogo:')
ValueError: could not convert string to float: 'quantidade do jogo:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
